--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,10 @@
+#*****************************************************************************#
+#                                                                             #
+# Windows                                                                     #
+# GitHub Desktop                                                              #
+#                                                                             #
+#*****************************************************************************#
+
 # Auto detect text files and perform LF normalization
 * text=auto
 
@@ -15,3 +22,70 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
+
+#*****************************************************************************#
+#                                                                             #
+# Visual Studio                                                               #
+# https://gitattributes.io                                                    #
+#                                                                             #
+#*****************************************************************************#
+
+# Auto detect text files and perform LF normalization
+# http://davidlaing.com/2012/09/19/customise-your-gitattributes-to-become-a-git-ninja/
+* text=auto
+
+# Custom for Visual Studio
+*.sln text eol=crlf
+*.csproj text eol=crlf
+*.vbproj text eol=crlf
+*.fsproj text eol=crlf
+*.dbproj text eol=crlf
+
+*.vcxproj text eol=crlf
+*.vcxitems text eol=crlf
+*.props text eol=crlf
+*.filters text eol=crlf
+
+#*****************************************************************************#
+#                                                                             #
+# C++                                                                         #
+# https://gitattributes.io                                                    #
+#                                                                             #
+#*****************************************************************************#
+
+#sources
+*.c text
+*.cc text
+*.cxx text
+*.cpp text
+*.c++ text
+*.hpp text
+*.h text
+*.h++ text
+*.hh text
+
+# Compiled Object files
+*.slo binary
+*.lo binary
+*.o binary
+*.obj binary
+
+# Precompiled Headers
+*.gch binary
+*.pch binary
+
+# Compiled Dynamic libraries
+*.so binary
+*.dylib binary
+*.dll binary
+
+# Compiled Static libraries
+*.lai binary
+*.la binary
+*.a binary
+*.lib binary
+
+# Executables
+*.exe binary
+*.out binary
+*.app binary
