--- a/Windows95/Windows95.vcxproj.filters
+++ b/Windows95/Windows95.vcxproj.filters
@@ -15,7 +15,17 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MyWin.cpp">
+    <ResourceCompile Include="MENU.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="menu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="MENU.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
