--- a/Windows95/MENU.rc
+++ b/Windows95/MENU.rc
@@ -1,23 +1,37 @@
 ﻿; Sample menu resource file.
+#include <Windows.h>
 #include "menu.h"
 
 MYMENU MENU
 {
     POPUP "&One"
     {
-        MENUITEM "&Alpha", IDM_ALPHA
-        MENUITEM "&Beta", IDM_BETA
+        MENUITEM "&Alpha\tF2", IDM_ALPHA
+        MENUITEM "&Beta\tF3", IDM_BETA
     }
     POPUP "&Two"
     {
-        MENUITEM "&Gamma", IDM_GAMMA
+        MENUITEM "&Gamma\tShift-G", IDM_GAMMA
         POPUP "&Delta"
         {
-            MENUITEM "&Epsilon", IDM_EPSILON
-            MENUITEM "&Zeta", IDM_ZETA
+            MENUITEM "&Epsilon\tCntl-E", IDM_EPSILON
+            MENUITEM "&Zeta\tCntl-Z", IDM_ZETA
         }
-        MENUITEM "&Eta", IDM_ETA
-        MENUITEM "&Theta", IDM_THETA
+        MENUITEM "&Eta\tCntl-F4", IDM_ETA
+        MENUITEM "&Theta\tF5", IDM_THETA
     }
     MENUITEM "&Help", IDM_HELP
+}
+
+; Define menu accelerators
+MYMENU ACCELERATORS
+{
+    VK_F2, IDM_ALPHA, VIRTKEY
+    VK_F3, IDM_BETA, VIRTKEY
+    "G", IDM_GAMMA
+    "^E", IDM_EPSILON
+    "^Z", IDM_ZETA
+    VK_F4, IDM_ETA, VIRTKEY, CONTROL
+    VK_F5, IDM_THETA, VIRTKEY
+    VK_F1, IDM_HELP, VIRTKEY
 }
