Demonstrate List Boxes

--- a/Windows95/Windows95.vcxproj
+++ b/Windows95/Windows95.vcxproj
@@ -65,7 +65,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="MENU.cpp" />
+    <ClCompile Include="MYDIALOG.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MYDIALOG.rc" />
