--- a/Windows95/Windows95.vcxproj.filters
+++ b/Windows95/Windows95.vcxproj.filters
@@ -15,11 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MENU.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
     <ResourceCompile Include="MYDIALOG.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
@@ -28,5 +23,10 @@
     <ClInclude Include="mydialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="MYDIALOG.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
