--- a/Windows95/MYDIALOG.rc
+++ b/Windows95/MYDIALOG.rc
@@ -20,7 +20,9 @@ MYDB DIALOG 18, 18, 142, 92
 CAPTION "Sample Dialog Box"
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 {
-    DEFPUSHBUTTON "Red", IDD_RED, 32, 40, 30, 14, WS_CHILD | WS_VISIBLE | WS_TABSTOP
-    PUSHBUTTON "Green", IDD_GREEN, 74, 40, 30, 14, WS_CHILD | WS_VISIBLE | WS_TABSTOP
+    DEFPUSHBUTTON "Red", IDD_RED, 57, 45, 30, 14, WS_CHILD | WS_VISIBLE | WS_TABSTOP
+    PUSHBUTTON "Green", IDD_GREEN, 95, 45, 30, 14, WS_CHILD | WS_VISIBLE | WS_TABSTOP
     PUSHBUTTON "Cancel", IDCANCEL, 52, 65, 37, 14, WS_CHILD | WS_VISIBLE | WS_TABSTOP
+    PUSHBUTTON "Select Fruit", IDD_SELFRUIT, 5, 45, 42, 14, WS_CHILD | WS_VISIBLE | WS_TABSTOP
+    LISTBOX ID_LB1, 2, 10, 47, 28, LBS_NOTIFY | WS_CHILD | WS_VISIBLE | WS_BORDER | WS_VSCROLL | WS_TABSTOP
 }
