Adding an Edit Box

--- a/Windows95/MYDIALOG.rc
+++ b/Windows95/MYDIALOG.rc
@@ -17,12 +17,14 @@ MYMENU ACCELERATORS
 }
 
 MYDB DIALOG 18, 18, 142, 92
-CAPTION "Sample Dialog Box"
+CAPTION "Test Dialog Box"
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 {
     DEFPUSHBUTTON "Red", IDD_RED, 57, 45, 30, 14, WS_CHILD | WS_VISIBLE | WS_TABSTOP
     PUSHBUTTON "Green", IDD_GREEN, 95, 45, 30, 14, WS_CHILD | WS_VISIBLE | WS_TABSTOP
     PUSHBUTTON "Cancel", IDCANCEL, 52, 65, 37, 14, WS_CHILD | WS_VISIBLE | WS_TABSTOP
     PUSHBUTTON "Select Fruit", IDD_SELFRUIT, 5, 45, 42, 14, WS_CHILD | WS_VISIBLE | WS_TABSTOP
+    PUSHBUTTON "Edit OK", IDOK, 68, 22, 30, 14, WS_CHILD | WS_VISIBLE | WS_TABSTOP
     LISTBOX ID_LB1, 2, 10, 47, 28, LBS_NOTIFY | WS_CHILD | WS_VISIBLE | WS_BORDER | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT ID_EB1, 68, 8, 72, 12, ES_LEFT | ES_AUTOHSCROLL | WS_CHILD | WS_VISIBLE | WS_BORDER | WS_TABSTOP
 }
