Demonstrate a modeless dialog box.

--- a/Windows95/MYDIALOG.rc
+++ b/Windows95/MYDIALOG.rc
@@ -18,7 +18,7 @@ MYMENU ACCELERATORS
 
 MYDB DIALOG 18, 18, 142, 92
 CAPTION "Test Dialog Box"
-STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_VISIBLE
 {
     DEFPUSHBUTTON "Red", IDD_RED, 57, 45, 30, 14, WS_CHILD | WS_VISIBLE | WS_TABSTOP
     PUSHBUTTON "Green", IDD_GREEN, 95, 45, 30, 14, WS_CHILD | WS_VISIBLE | WS_TABSTOP
