--- a/Windows95/Windows95.vcxproj.filters
+++ b/Windows95/Windows95.vcxproj.filters
@@ -15,17 +15,22 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="MYDIALOG.rc">
+    <None Include="CURSOR.cur">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="ICON.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="RESOURCE.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="mydialog.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="MYDIALOG.cpp">
+    <ClCompile Include="MYICON.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
