--- a/Windows95/Windows95.vcxproj
+++ b/Windows95/Windows95.vcxproj
@@ -74,6 +74,7 @@
     <None Include="CURSOR.cur" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="BP.bmp" />
     <Image Include="ICON.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
