--- a/Windows95/Windows95.vcxproj.filters
+++ b/Windows95/Windows95.vcxproj.filters
@@ -23,6 +23,9 @@
     <Image Include="ICON.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="BP.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="RESOURCE.rc">
