Demonstrate radio buttons.

--- a/Controls2/CONTROLS2.rc
+++ b/Controls2/CONTROLS2.rc
@@ -23,4 +23,9 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
     PUSHBUTTON "Cancel", IDCANCEL, 74, 65, 37, 14, WS_CHILD | WS_VISIBLE | WS_TABSTOP
     CHECKBOX "Checkbox 1", ID_CB1, 3, 10, 48, 12
     AUTOCHECKBOX "Checkbox 2", ID_CB2, 3, 22, 48, 12
+    GROUPBOX "Checkboxes", ID_GB1, 1, 1, 51, 34
+    CTEXT "This is text", ID_CT1, 1, 44, 50, 24
+    AUTORADIOBUTTON "Radio 1", ID_RB1, 60, 10, 48, 12
+    AUTORADIOBUTTON "Radio 2", ID_RB2, 60, 22, 48, 12
+    GROUPBOX "Radio Group", ID_GB2, 58, 1, 51, 34
 }
