Reorganized my solution yet again. I also cloned the "StandardControls2" project for the following example.

--- a/StandardControls2/StandardControls2.vcxproj.filters
+++ b/StandardControls2/StandardControls2.vcxproj.filters
@@ -15,18 +15,18 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CONTROLS2.cpp">
+    <ClCompile Include="STDCTLS2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="CONTROLS2.rc">
-      <Filter>Resource Files</Filter>
-    </ResourceCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="controls2.h">
+    <ClInclude Include="stdctls2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="STDCTLS2.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
