--- a/Text/TEXT.rc
+++ b/Text/TEXT.rc
@@ -4,6 +4,7 @@
 MYMENU MENU
 {
     MENUITEM "&Show", ID_SHOW
+    MENUITEM "Change &Font", ID_FONT
     MENUITEM "&Reset", ID_RESET
     MENUITEM "&Help", ID_HELP
 }
@@ -11,6 +12,7 @@ MYMENU MENU
 MYMENU ACCELERATORS
 {
     VK_F2, ID_SHOW, VIRTKEY
-    VK_F3, ID_RESET, VIRTKEY
+    VK_F3, ID_FONT, VIRTKEY
+    VK_F4, ID_RESET, VIRTKEY
     VK_F1, ID_HELP, VIRTKEY
 }
