--- a/Graphics/Graphics.vcxproj.filters
+++ b/Graphics/Graphics.vcxproj.filters
@@ -15,28 +15,17 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="CURSOR.cur">
-      <Filter>Resource Files</Filter>
-    </None>
+    <ClInclude Include="graph.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="ICON.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="BP.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="BP2.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="RESOURCE.rc">
+    <ResourceCompile Include="GRAPH.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BITMAPS.cpp">
+    <ClCompile Include="GRAPH.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
