--- a/Graphics/GRAPH.rc
+++ b/Graphics/GRAPH.rc
@@ -6,6 +6,8 @@ MYMENU MENU
     MENUITEM "&Lines", ID_LINES
     MENUITEM "&Rectangles", ID_RECTANGLES
     MENUITEM "&Ellipses", ID_ELLIPSES
+    MENUITEM "&Magnify", ID_SIZE
+    MENUITEM "&Origin", ID_ORG
     MENUITEM "&Reset", ID_RESET
     MENUITEM "&Help", ID_HELP
 }
@@ -15,6 +17,8 @@ MYMENU ACCELERATORS
     VK_F2, ID_LINES, VIRTKEY
     VK_F3, ID_RECTANGLES, VIRTKEY
     VK_F4, ID_ELLIPSES, VIRTKEY
-    VK_F5, ID_RESET, VIRTKEY
+    VK_F5, ID_SIZE, VIRTKEY
+    VK_F6, ID_ORG, VIRTKEY
+    VK_F7, ID_RESET, VIRTKEY
     VK_F1, ID_HELP, VIRTKEY
 }
